--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -27,7 +27,7 @@
 @import "button-group";
 @import "nav";
 @import "navbar";
-@import "card";
+@import "card-rtl";
 @import "accordion";
 @import "breadcrumb";
 @import "pagination";
