make carousel rtl

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -40,7 +40,7 @@
 @import "modal";
 @import "tooltip";
 @import "popover";
-@import "carousel";
+@import "carousel-rtl";
 @import "spinners";
 @import "offcanvas";
 @import "variables-dark";
