--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -45,7 +45,7 @@
 @import "offcanvas";
 @import "variables-dark";
 // Helpers
-@import "helpers";
+@import "helpers-rtl";
 
 // Utilities
 @import "utilities/api";
