--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -9,12 +9,12 @@
 // Configuration
 @import "functions";
 @import "variables";
-@import "mixins";
+@import "mixins-rtl";
 @import "utilities";
 
 // Layout & components
 @import "root";
-@import "reboot";
+@import "reboot-rtl";
 @import "type";
 @import "images";
 @import "containers";
