make dropdown rtl

--- a/scss/bootstrap-reboot-rtl.scss
+++ b/scss/bootstrap-reboot-rtl.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
- * RTL-ized by Seyed Amir Mehrizi (https://github.com/PerseusTheGreat)
+ * RTL-ized by Seyed Amir Mehrizi (https://github.com/seyed-amir-mehrizi)
  * RTL rev. 1 (https://github.com/seyed-amir-mehrizi/bootstrap-v5-rtl)
  */
 
