--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -23,7 +23,7 @@
 @import "forms";
 @import "buttons";
 @import "transitions";
-@import "dropdown";
+@import "dropdown-rtl";
 @import "_button-group-rtl";
 @import "nav";
 @import "navbar";
