add grid rtl to the library

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -8,7 +8,7 @@
 // scss-docs-start import-stack
 // Configuration
 @import "functions";
-@import "variables";
+@import "variables-rtl";
 @import "mixins-rtl";
 @import "utilities";
 
