--- a/scss/_forms-rtl.scss
+++ b/scss/_forms-rtl.scss
@@ -1,9 +1,9 @@
 @import "forms/labels";
 @import "forms/form-text";
 @import "forms/form-control";
-@import "forms/form-select";
-@import "forms/form-check";
+@import "forms/form-select-rtl";
+@import "forms/form-check-rtl";
 @import "forms/form-range";
-@import "forms/floating-labels";
+@import "forms/floating-labels-rtl";
 @import "forms/input-group-rtl";
 @import "forms/validation";
