--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -37,7 +37,7 @@
 @import "list-group-rtl";
 @import "close";
 @import "toasts";
-@import "modal";
+@import "modal-rtl";
 @import "tooltip";
 @import "popover";
 @import "carousel-rtl";
