--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -25,7 +25,7 @@
 @import "transitions";
 @import "dropdown-rtl";
 @import "_button-group-rtl";
-@import "nav";
+@import "nav-rtl";
 @import "navbar";
 @import "card";
 @import "accordion-rtl";
