make navbar rtl

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -26,7 +26,7 @@
 @import "dropdown-rtl";
 @import "_button-group-rtl";
 @import "nav-rtl";
-@import "navbar";
+@import "navbar-rtl";
 @import "card";
 @import "accordion-rtl";
 @import "breadcrumb-rtl";
