make offcanvas rtl

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -42,7 +42,7 @@
 @import "popover";
 @import "carousel-rtl";
 @import "spinners";
-@import "offcanvas";
+@import "offcanvas-rtl";
 @import "variables-dark";
 // Helpers
 @import "helpers-rtl";
