make pagination rtl.

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -30,7 +30,7 @@
 @import "card";
 @import "accordion-rtl";
 @import "breadcrumb-rtl";
-@import "pagination";
+@import "pagination-rtl";
 @import "badge";
 @import "alert-rtl";
 @import "progress";
