make popover rtl.

--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -39,7 +39,7 @@
 @import "toasts";
 @import "modal-rtl";
 @import "tooltip";
-@import "popover";
+@import "popover-rtl";
 @import "carousel-rtl";
 @import "spinners";
 @import "offcanvas-rtl";
