--- a/scss/bootstrap-rtl.scss
+++ b/scss/bootstrap-rtl.scss
@@ -15,7 +15,7 @@
 // Layout & components
 @import "root";
 @import "reboot-rtl";
-@import "type";
+@import "type-rtl";
 @import "images";
 @import "containers";
 @import "grid";
@@ -41,7 +41,7 @@
 @import "tooltip";
 @import "popover-rtl";
 @import "carousel-rtl";
-@import "spinners";
+@import "spinners-rtl";
 @import "offcanvas-rtl";
 @import "variables-dark";
 // Helpers
